--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,7 +16,7 @@ img {
     height: 300px;
     box-shadow: 0 0 30px #555;
     float: right;
-    border-radius: :0 10px 0 0;
+    border-radius: 0 10px 0 0;
 }
 
 h1, h2 {
