--- a/lesson_2/styles2/main2.css
+++ b/lesson_2/styles2/main2.css
@@ -35,6 +35,10 @@ header h2 {
     padding-bottom: 25px;
 }
 
+h3, h4 {
+    font-size: larger;
+}
+
 footer {
     font-size: 1.5rem;
     padding: 15px;
