--- a/styles/medium.css
+++ b/styles/medium.css
@@ -1,4 +1,4 @@
-    @media screen and (min-width: 32.5em) {
+  /*  @media screen and (min-width: 32.5em) {
 
 h1 {
     font-size: 2.5rem;
@@ -19,4 +19,34 @@ h1 {
     border-radius: 0 10px 0 0;
  }
 
- }
+ }*/
+
+ @media only screen and (min-width: 32.5em) {
+   h1 {
+       font-size: 1.8rem;
+   }
+
+   h2 {
+       font-size: 1.5rem;
+   }
+
+   header,
+   footer {
+       border-style: double;
+       border-radius: 12px;
+       border-width: 2px;
+   }    
+
+   header img {
+       width: 120px;
+       display: flex;
+   }
+
+   hr {
+       /* margin: auto 0px; */
+       width: 31.5em;
+   }
+
+   nav ul { display: flex; }
+   nav ul li { flex: 1 1 auto; } 
+}
