--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,7 @@
 header {
     font-family: 'Playfair Display', serif;
-    display: grid;
+    display: flex;
+    flex-flow: row wrap;
     grid-template-columns: auto auto;
     align-items: center;
     margin-left: auto;
@@ -21,7 +22,9 @@ img {
 h1, h2 {
     font-family: 'Playfair Display', serif; 
     font-size: 1.5rem;
-    margin: 0.15rem
+    margin: 0.15rem;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
 }
 
 ul {
@@ -30,7 +33,8 @@ ul {
 
 main {
     
-    display: grid;
+    display: flex;
+    flex-direction: column;
     margin: auto;
     margin-left: auto;
     margin-right: auto;
@@ -53,7 +57,7 @@ p {
   
 footer { 
     font-family: 'Playfair Display', serif;
-    display: grid;
+    display: flex;
     background-color: #f6b70a;
     align-items: center;
     justify-content: center;
@@ -67,4 +71,5 @@ footer {
   
 main, footer, header {
     max-width : 800px;
+    align-items: ;
 }
