Chamber of Commerce Commit

--- a/chamber/styles/normalize.css
+++ b/chamber/styles/normalize.css
@@ -195,8 +195,7 @@
   button,
   [type="button"],
   [type="reset"],
-  [type="submit"] {
-  -webkit-appearance: button;
+  [type="submit"] { -webkit-appearance: button;
   }
   
   /**
