--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -1,7 +1,125 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;1,900&display=swap" rel="stylesheet">');
 
 @media(max-width: 799px) {
-	/*Body  */
+	
+header {
+	display: grid;
+	grid-template-columns: repeat(15, 1fr);
+	grid-template-rows: repeat(3, auto);
+	gap: 5px;
+	background-color:  #3ca9ed;
+	z-index: 10;
+	height: 200%;
+	box-shadow: 2px 2px 10px black;
+  }
+  
+  header h1 {
+	grid-column: 5/ 11;
+	grid-row: 1 / 2;
+	margin: 0;
+	align-self: end;
+	font-family: "Playfair Display", serif;
+	font-size: 1.8em;
+  }
+  
+  header h2 {
+	grid-column: 5/ 16;
+	grid-row: 2 / 3;
+	margin: 0;
+	font-family: "Playfair Display", serif;
+  }
+  
+  header #facebook {
+	grid-column: 11 / 13;
+	object-fit: cover;
+	width: 80%;
+	align-self: center;
+	border-radius: 40px;
+  }
+  
+  header #instagram {
+	grid-column: 13 / 15;
+	object-fit: cover;
+	width: 80%;
+	align-self: center;
+	border-radius: 40px;
+  }
+  
+  header #logo {
+	grid-column: 1 / 5;
+	grid-row: 1 / 3;
+	border-radius: 50%;
+	object-fit: cover;
+	width: 100%;
+	align-self: center;
+  }
+  
+  header button {
+	grid-column: 15 / 16;
+	background-color: #1c98ed;
+	border: 2px solid #000;
+	color: #fff;
+	margin: 0.5rem;
+	padding: 0.75rem;
+	height: 50px;
+	width: 50px;
+	cursor: pointer;
+	font-weight: bolder;
+  }
+  
+  header p {
+	grid-column: 1 / -1;
+	grid-row: 4 / 5;
+	margin: 0.5rem;
+	padding: 0.5rem;
+	background-color: #003a63;
+	text-align: center;
+	color: white;
+	font-family: "Fira Sans", sans-serif;
+	font-style: italic;
+  }
+  
+  header nav {
+	grid-column: 1 / -1;
+  }
+  
+  nav ul {
+	display: none;
+  }
+  
+  nav.open ul {
+	display: grid;
+	grid-template-columns: 1fr;
+	justify-items: center;
+	text-align: center;
+	padding: 0;
+	margin: 0;
+  }
+  
+  nav ul li {
+	list-style-type: none;
+	padding: 0.5rem;
+	width: calc(100% - 1.5rem);
+	text-align: center;
+  }
+  
+  nav ul li a:hover {
+	text-decoration: underline;
+  
+	color: rgb(213, 244, 16);
+  }
+  
+  nav ul li a {
+	padding: 0.5rem;
+	align-self: center;
+	text-decoration: none;
+	color: #fff;
+	font-family: "Fira Sans", sans-serif;
+	font-weight: bold;
+  }
+	
+	
+	/* Body 
 	* {
 		box-sizing: border-box;
 		margin: 0;
@@ -38,7 +156,7 @@
 /* _______________________________________________________________________________________________________________________________ */
 
 /* HEADER */
-/* headerlogo */
+/* headerlogo 
 	header .headerlogo {
 		display: flex;
 		flex-direction: row;
@@ -53,9 +171,28 @@
 	.headerlogo img:hover {
 		transform: scale(1.2);
 	}
-/* ______________________________________________________________________________________________________ */
+/* _____*/_________________________________________________________________________________________________ */
 /* social media icons */
-	.iconscontainer {
+
+/* header .iconscontainer ul { 
+	display: flex;
+	flex-direction: row;
+	cursor: pointer;
+	align-items: center;
+	justify-content: center;
+	list-style: none
+	
+}
+
+.iconscontainer img {
+	width: 20%;
+	transition: all 1s;
+}
+.iconscontainer img:hover {
+	transform: scale(1.2);
+}*/
+
+	/* .iconscontainer {
 		display:inline-flex;
 		cursor: pointer;
 	}
@@ -93,8 +230,8 @@
 	
 	.fa-linkedin:hover{
 		color: #3C5A9B;
-	}
-
+	} */
+ */
 /* _________________________________________________________________________________________________________ */
 
 /* Mobile Sized Navigation- Hamburger Nav */
