--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -1,60 +1,200 @@
 /* DESKTOP VIEW */
-@media (min-width: 1201px) {
+@media only screen and (min-width: 64rem) {
 /* BODY */
-	* {
-		box-sizing: border-box;
-		margin: 0;
-		padding: 0;
-	}
-
-	body {
-		font-family: 'Nanum Gothic', sans-serif;
-		padding: 0;
-		margin: 0;
-		background-color:  #e4d9c4;
-	}
-
-	header, footer { 
-		background-color:  #3ca9ed;
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-		height: 200px;
-		padding: 5px 10%;
-	}
-	/* ___________________________________________________________________________ */
+body {
+	font-family: 'Nanum Gothic', sans-serif;
+	background-color:  #e4d9c4;
+}
+/* ________________________________________________________________________________________________ */
 /* HEADER */
-/* Headerlogo */
-	header .headerlogo {
-		display: flex;
-		flex-direction: row;
-		cursor: pointer;
-	}
-	.headerlogo img {
-		width: 20%;
-		transition: all 1s;
-	}
-	.headerlogo img:hover {
-		transform: scale(1.2);
+header { 
+	background-color:  #3ca9ed;
+	
+}
+
+#main_nav ul {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  font-size: .5rem;
+
+  }
+  #headerlogo{
+	grid-column: 1/2;
+	width: 200px;
+  }
+  #main_nav h1{
+	grid-column: 2/3;
+    align-self: center;
+    font-family: "Playfair Display", serif;
+  }
+  #main_nav li{
+	font-size: 20px;
+	padding: 5px;
+	list-style-type: none;
+  }
+
+  #facebook{
+	 
+	width: 80%;
+	border-radius: 40%;
+  }
+
+  #linkedin{
+
+	width: 80%;
+	border-radius: 40%;
+  }
+
+  .nav_style{
+	font-family:"Playfair Display", serif;
+	font-size: 2.5px;
+	list-style-type: none; 
+	text-decoration: none;
+  }
+
+	nav ul li a:hover {
+		background-color: rgba(0,0,0,0.3) ;
 	}
 
+  }
+
+  nav ul li.active a {
+    background-color: rgba(0, 0, 0, 0.2);
+    color: #fff;
+}
+
+nav ul li a{
+    display: block;
+    padding: .8rem 2vw;
+    text-decoration: none;
+    color: #333;
+    border-top: 1px solid rgba(0, 0, 0, 0.5);
+}
+/* 
+
+
+ :hover {
+	transform: scale(1.2);
+}
+
+  header h1 {
+    grid-column: 3 / 6;
+    grid-row: 1 / 2;
+    margin: 0;
+    padding-top: 0.5rem;
+    align-self: center;
+    font-family: "Playfair Display", serif;
+    margin-top: 32px;
+  }
+
+  header h2 {
+    grid-column: 3 / 6;
+    grid-row: 2 / 3;
+    margin: 0;
+    font-size: medium;
+    font-family: "Playfair Display", serif;
+    margin-top: -20px;
+    margin-left: 1px;
+  }
+
+  header nav {
+    grid-column: 6 / 14;
+    grid-row: 1 / 3;
+    align-self: center;
+    font-size: 1.1em;
+  }
+
+  nav.open ul {
+	display: none;
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  nav ul li a {
+
+    font-weight: bold;
+    font-family: "Playfair Display", serif;;
+  }
+
+  header nav ul {
+	display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    gap: 0.5rem;
+    justify-items: center;
+    padding: 0;
+    margin: 0;
+  }
+ 
+nav ul {
+   list-style-type: none; 
+   padding: 0;
+   margin: 0;
+}
+
+  nav ul li:hover {
+    cursor: pointer;
+  }
+
+  nav.open ul {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    justify-items: center;
+    text-align: center;
+  }
+
+  nav ul li.active a {
+    background-color: rgba(0, 0, 0, 0.2);
+    color: #fff;
+}
+
+  header #facebook {
+    grid-column: 14 / 15;
+    grid-row: 1 / 3;
+    object-fit: cover;
+    width: 50%;
+    align-self: center;
+    justify-self: end;
+  }
+
+  header #linkedin {
+    grid-column: 15 / 16;
+    grid-row: 1 / 3;
+    object-fit: cover;
+    width: 50%;
+    align-self: center;
+    justify-self: center;
+  }
+
+  header button {
+    display: none;
+    font-family: "Playfair Display", serif;
+  }
+
+  header p {
+    grid-column: 1 / -1;
+    grid-row: 3 / 4;
+    margin: 0.5rem;
+    padding: 0.5rem;
+    text-align: center;
+	font-family: "Playfair Display", serif;
+	}
+ */
 /* ___________________________________________________________________________________ */
 /* Desktop sized navigation */
-	nav {
-		display: flex;
+	/* nav { 
+		
 		align-items: center;
 		justify-content: center;
 		
 	}
 
 	nav #main_nav {
-		display: flex ;
+		
 		list-style: none ;
 
 	}
 
 	nav #main_nav li a{
-		display: inline-block ;
+		
 		padding: 20px;
 		font-size: 2rem;
 		color: white;
@@ -70,56 +210,32 @@
 		display: none;
 	}
 /* We want the X not to appear on the side of the hamburger nav but be hidden */
-#hamburgerBtn span:nth-child(1) {display: block;}
-#hamburgerBtn span:nth-child(2) {display: none;}
+/* #hamburgerBtn span:nth-child(1) {display: block;} */
+/* #hamburgerBtn span:nth-child(2) {display: none;} */
+/* */ 
 
 /* _________________________________________________________________________________ */
 /* Social Media Icons */
-.iconscontainer{
-	display: flex;
-}
 
-.icons {
+/* header .iconscontainer ul { 
 	display: flex;
 	flex-direction: row;
+	cursor: pointer;
 	align-items: center;
 	justify-content: center;
-	font-size: 40px !important;
-	margin: -5px 0px 0px 50px;
-	width: 100px;
-	color: #e4d9c4;
-}
-
-.fa-facebook:hover{
-	color:  #3C5A9B;
-}
-
-.fa-linkedin:hover{
-	color: #3C5A9B;
-}
-	.icons-block{
-		display: flex;
-	}
-
-	.icons {
-		
-		display: flex;
-		flex-direction: row;
-		align-items: center;
-		justify-content: center;
-		font-size: 40px !important;
-		margin: -5px 0px 0px 50px;
-		width: 100px;
-		color: white;
-	}
-
-	.fa-facebook:hover{
-		color: #3C5A9B;
-	}
+	list-style: none
 	
-	.fa-linkedin:hover:hover{
-		color: #000000;
-	}
+}
+
+.iconscontainer img {
+	width: 20%;
+	transition: all 1s;
+}
+.iconscontainer img:hover {
+	transform: scale(1.2);
+}
+*/
+ 
 /*________________________________________________________________________________  */
 /*Header Date  */
 	.date {
@@ -137,6 +253,8 @@
 	main{
 		background-color: #e4d9c4;
 		margin: 50px;
+		max-width:  1700px;
+		
 	}
 
 	.containers                                                            {
@@ -384,7 +502,7 @@
 	
 	h1{
 		font-size: 40px !important;
-		font-family: 'Bree Serif', serif;
+		
 		font-family: 'Playfair Display', serif
 	}
 	
@@ -419,9 +537,16 @@
 /* _______________________________________________________________________________ */
 /* FOOTER */
 
-footer { 
-	display: flex;
-	flex-direction: row;
+footer {
+	max-width:  1700px;
+	background-color:  #3ca9ed;
+	display: grid;
+	display: grid;
+	grid-template-columns: 2fr 2fr 2fr;
+	grid-template-rows: repeat(6, auto);
+	justify-items: center;
+	align-items: center;
+	padding-bottom: 20px;
 }
 
 footer p {
@@ -429,32 +554,20 @@ footer p {
 	padding: 20px;
 }
 
-#footercontainer{
-	display: grid;
-	grid-template-columns: auto auto auto;
-	text-align: center;
-	align-items: center;
-	justify-content: center;
-}
-	
+
 footer  img{
 	display: flex;
-	display:inline;
 	cursor: pointer;
-	width: 60%;
+	width: 20%;
 	transition: all 1s;
 	margin: 0px 0px 0px 20px;
+	margin-top: 10px;
 }
 
 footer img:hover {
 	transform: scale(1.2);
 }
 
-footer .address {
-	display: flex;
-	flex-direction: row;
-	text-align: left;
-}
 
 
 .footer-navigation{
@@ -462,4 +575,3 @@ footer .address {
 	font-size: 25px !important;
 }
 
-}
