--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -1,109 +1,104 @@
 /* TABLET VIEW */
-@media (min-width: 800px) and (max-width: 1200px) {
-
-	* {
-		box-sizing: border-box;
-		margin: 0;
-		padding: 0;
-	}
+@media only screen and (min-width: 35rem) {
 
 	body {
 		font-family: 'Nanum Gothic', sans-serif;
-		padding: 0;
-		margin: 0;
 		background-color:  #e4d9c4;
-		
 	}
+/* ________________________________________________________________________________ */
+/* HEADER */
 
-	header, footer { 
+
+	header{
 		background-color:  #3ca9ed;
-		display: flex;
-		justify-content: space-between;
+		display: grid;
+		grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+		/* justify-content: space-between;
 		align-items: center;
 		height: 200px;
-		padding: 5px 10%;
-
-	}
-	/* ________________________________________________________________________________ */
-/* HEADER */
-/* Headerlogo */
-	header .headerlogo {
-		display: flex;
-		flex-direction: row;
-		cursor: pointer;
-	}
-	.headerlogo img {
-		width: 20%;
-		transition: all 1s;
-	}
-	.headerlogo img:hover {
-		transform: scale(1.2);
-	}
-/* _____________________________________________________________________________________ */
-/* Social Media Icons */
-	.social-media-logos {
-		display:inline-flex;
-		cursor: pointer;
-	}
-
-	header .social-media-logos{
-		width: 200px;
-		margin: 15px;
-	}
-
-	header .social-media-logos .logo{
-		width: 50%;
-		min-height: auto;
-		transition: all 1s;
-		margin-right: 20px;
-		
-	}
-	header .social-media-logos img:hover{
-		transform: scale(1.2);
-	}
-
-	.iconscontainer{
-		padding: 10px;
-	}
-
-	.icons {
-		
-		display: inline;
-		align-items: center;
-		font-size: 70px !important;
-		color: white;
-	}
-
-	.fa-facebook:hover{
-		color: #3C5A9B;
+		padding: 5px 10%; */
 	}
 	
-	.fa-linkedin:hover{
-		color: #000000;
+/* Headerlogo */
+	header #headerlogo {
+		grid-column: 1 / 2;
+		grid-row: 1 / 1;
+		align-self: center;
+		justify-self: center;
+		border-radius: 50%;
+		object-fit: cover;
+		width: 80%;
+		cursor: pointer;
+		transition: all 1s;
+	}
+		
+	#headerlogo img:hover {
+		transform: scale(1.2);
 	}
 
+	header h1 {
+		grid-column: 2/3;
+		grid-row: 1 / 1;
+		margin: 0;
+		align-self: center;
+	}
+	
+	header h2 {
+		grid-column: 3/4;
+		grid-row: 1/1;
+		margin: 0;
+	}
+	
+	header button {
+		grid-column: 4/5;
+		align-self: center;
+		justify-self: center;
+		background-color: #1c98ed;
+		border: 2px solid #000;
+		margin: 0.4rem;
+		height: 50px;
+		width: 50px;
+		padding: 0.5rem;
+		cursor: pointer;
+		font-weight: bolder;
+	}
+	
+	header p {
+		grid-column: 1 / -1;
+		grid-row: 4 / 5;
+		margin: 0.5rem;
+		padding: 1rem;
+		background-color: #003a63;
+		text-align: center;
+		font-family:"Playfair Display", serif;
+	}
+	
+/* _____________________________________________________________________________________ */
+/* Social Media Icons */
+header #facebook {
+	grid-column: 5/6;
+	object-fit: cover;
+	width: 100%;
+	align-self: center;
+	justify-self: center;
+	border-radius: 40px;
+  }
 
-/* ____________________________________________________________________________________ */
+header #linkedin {
+	grid-column: 6/7;
+	object-fit: cover;
+	width: 100%;
+	align-self: center;
+	justify-self: center;
+	border-radius: 40px;
+  }
+
+	/* ____________________________________________________________________________________ */
 /* Tablet and Mobile Viewport (Hamburger Button) */
-
-html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
-
-/*----------- apply a natural box layout model to all elements --------------*/
-* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
-
-h1, p {margin: 0 2vw;}
-
-nav button{
-	justify-content: flex-end;
-	align-items: flex-start;
-    margin: .2rem 2vw;
-    background: transparent;
-    border: none;
-    font-size: 2rem;
-    color: #555;
+nav{
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 }
-
-nav { background-color: #e4d9c4;}
 
 nav ul {
    list-style-type: none; 
