--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -1,64 +1,75 @@
-/* DESKTOP VIEW */
-@media only screen and (min-width: 64rem) {
-/* BODY */
+/* DESKTOP VIEW */ 
+
+@media (min-width: 1201px) {
+
 body {
 	font-family: 'Nanum Gothic', sans-serif;
 	background-color:  #e4d9c4;
-}
-/* ________________________________________________________________________________________________ */
-/* HEADER */
-header { 
-	background-color:  #3ca9ed;
-	
+	padding: 0;
+	margin: 0;
 }
 
+header { 
+	background-color:  #3ca9ed;
+	justify-content: space-between;
+	height: 250px;
+	padding: 5px 10%;
+}
+	
 #main_nav ul {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  font-size: .5rem;
+  	font-size: 1em;
+}
 
-  }
-  #headerlogo{
+#headerlogo{
 	grid-column: 1/2;
-	width: 200px;
-  }
-  #main_nav h1{
-	grid-column: 2/3;
-    align-self: center;
+	width: 80%;
+	cursor: pointer;
+	transition: all 1s;
+}
+
+#headerlogo img:hover {
+		transform: scale(1.2);
+}
+  
+
+#main_nav h1{
+	grid-column: 2 / 3;
     font-family: "Playfair Display", serif;
-  }
-  #main_nav li{
+}
+
+#main_nav li{
 	font-size: 20px;
 	padding: 5px;
 	list-style-type: none;
-  }
+}
 
-  #facebook{
-	 
+#facebook,  #linkedin{
 	width: 80%;
-	border-radius: 40%;
-  }
+	border-radius: 50%;
+}
 
-  #linkedin{
+#facebook,  #linkedin a:hover {
+	transition: all 1s;
+	transform: scale(1.2);
+}
 
-	width: 80%;
-	border-radius: 40%;
-  }
-
-  .nav_style{
+.nav_style{
 	font-family:"Playfair Display", serif;
 	font-size: 2.5px;
 	list-style-type: none; 
 	text-decoration: none;
   }
 
-	nav ul li a:hover {
+nav ul li a:hover {
 		background-color: rgba(0,0,0,0.3) ;
+		color: #0e0f0e;
+		transition: all 1s;
+		transform: scale(1.2);
 	}
 
-  }
-
-  nav ul li.active a {
+nav ul li.active a {
     background-color: rgba(0, 0, 0, 0.2);
     color: #fff;
 }
@@ -70,508 +81,12 @@ nav ul li a{
     color: #333;
     border-top: 1px solid rgba(0, 0, 0, 0.5);
 }
-/* 
 
-
- :hover {
-	transform: scale(1.2);
+main img{
+	width: 300px;
+	height: 400px
 }
+/* Desktop Views ****************************/
 
-  header h1 {
-    grid-column: 3 / 6;
-    grid-row: 1 / 2;
-    margin: 0;
-    padding-top: 0.5rem;
-    align-self: center;
-    font-family: "Playfair Display", serif;
-    margin-top: 32px;
-  }
 
-  header h2 {
-    grid-column: 3 / 6;
-    grid-row: 2 / 3;
-    margin: 0;
-    font-size: medium;
-    font-family: "Playfair Display", serif;
-    margin-top: -20px;
-    margin-left: 1px;
-  }
-
-  header nav {
-    grid-column: 6 / 14;
-    grid-row: 1 / 3;
-    align-self: center;
-    font-size: 1.1em;
-  }
-
-  nav.open ul {
-	display: none;
-    grid-template-columns: repeat(4, 1fr);
-  }
-
-  nav ul li a {
-
-    font-weight: bold;
-    font-family: "Playfair Display", serif;;
-  }
-
-  header nav ul {
-	display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    gap: 0.5rem;
-    justify-items: center;
-    padding: 0;
-    margin: 0;
-  }
- 
-nav ul {
-   list-style-type: none; 
-   padding: 0;
-   margin: 0;
 }
-
-  nav ul li:hover {
-    cursor: pointer;
-  }
-
-  nav.open ul {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    justify-items: center;
-    text-align: center;
-  }
-
-  nav ul li.active a {
-    background-color: rgba(0, 0, 0, 0.2);
-    color: #fff;
-}
-
-  header #facebook {
-    grid-column: 14 / 15;
-    grid-row: 1 / 3;
-    object-fit: cover;
-    width: 50%;
-    align-self: center;
-    justify-self: end;
-  }
-
-  header #linkedin {
-    grid-column: 15 / 16;
-    grid-row: 1 / 3;
-    object-fit: cover;
-    width: 50%;
-    align-self: center;
-    justify-self: center;
-  }
-
-  header button {
-    display: none;
-    font-family: "Playfair Display", serif;
-  }
-
-  header p {
-    grid-column: 1 / -1;
-    grid-row: 3 / 4;
-    margin: 0.5rem;
-    padding: 0.5rem;
-    text-align: center;
-	font-family: "Playfair Display", serif;
-	}
- */
-/* ___________________________________________________________________________________ */
-/* Desktop sized navigation */
-	/* nav { 
-		
-		align-items: center;
-		justify-content: center;
-		
-	}
-
-	nav #main_nav {
-		
-		list-style: none ;
-
-	}
-
-	nav #main_nav li a{
-		
-		padding: 20px;
-		font-size: 2rem;
-		color: white;
-	}
-
-	nav #main_nav li a:hover{
-		color:#930404 ;
-		transition: all 1s;
-		transform: scale(1.2);
-	}
-
-	nav #hambugerBtn {
-		display: none;
-	}
-/* We want the X not to appear on the side of the hamburger nav but be hidden */
-/* #hamburgerBtn span:nth-child(1) {display: block;} */
-/* #hamburgerBtn span:nth-child(2) {display: none;} */
-/* */ 
-
-/* _________________________________________________________________________________ */
-/* Social Media Icons */
-
-/* header .iconscontainer ul { 
-	display: flex;
-	flex-direction: row;
-	cursor: pointer;
-	align-items: center;
-	justify-content: center;
-	list-style: none
-	
-}
-
-.iconscontainer img {
-	width: 20%;
-	transition: all 1s;
-}
-.iconscontainer img:hover {
-	transform: scale(1.2);
-}
-*/
- 
-/*________________________________________________________________________________  */
-/*Header Date  */
-	.date {
-		background-color: #3ca9ed;
-		color: white;
-		text-align: center;
-		margin-top: -50px;
-		margin-left: 10px;
-		margin-right: 10px;
-		padding: 10px 0px 10px 0px;
-	}
-/* _______________________________________________________________________________ */
-/* MAIN */
-	
-	main{
-		background-color: #e4d9c4;
-		margin: 50px;
-		max-width:  1700px;
-		
-	}
-
-	.containers                                                            {
-		display: grid;
-		grid-template-columns: 1fr 3fr 1fr; 
-  		grid-template-rows: repeat(3, minmax(auto, 300px)); 
-		max-width: 1700px; 
-		margin: 0 auto; 
-	}
-
-	.box1, .box2, .box3, .box4, .box5, .box6 {
-		background-color:#e4d9c4;
-		border:5px solid gray;
-		margin: 10px;
-		padding: 10px;
-	} 
-	  
-	.box1, .box2, .box3 {
-		min-width: 150px;
-		margin: 10px;
-		padding: 30px;
-	}
-
-
-/* Event */
-	.box1 {
-		grid-column: 1 / 2; 
-		grid-row: 1 / 2 ; 
-		text-align: center;
-		align-items: center;
-		justify-content: center;
-	}
-
-/*Weather box*/
-	.box2 {
-		grid-column: 1 / 2; 
-		grid-row: 2 / 3;
-		display: flex;
-		text-align: center;
-		align-items: center;
-		justify-content: center;
-	}
-
-	.upside-weather{
-		display: inline-block;
-		padding: 30px;
-	  }
-
-	.fa-thermometer-half{
-		font-size: 50px;
-		transition: all 1s;
-		}
-
-
-	.fa-thermometer-half:hover {
-		transform: scale(1.2);
-	}
-
-/* Join */
-	.box3 {
-		grid-column: 1 / 2; 
-		grid-row: 3 / 4; 
-		text-align: center;
-		align-items: center;
-		justify-content: center;
-	}
-	  
-	.join-button{
-		display: inline-block;
-		margin: 20px;
-		background-color: #c8b102;
-		border: 1px solid #ffffff;
-		border-radius: 4px;
-		box-shadow: rgba(255, 255, 255, 0.1) 0 2px 4px 0;
-		box-sizing: border-box;
-		color: #fff;
-		cursor: pointer;
-		outline: none;
-		outline: 0;
-		padding: 15px 60px;
-		text-align: center;
-		transform: translateY(0);
-		transition: transform 150ms, box-shadow 150ms;
-		user-select: none;
-		-webkit-user-select: none;
-		touch-action: manipulation;
-	}
-
-	.join-button:hover {
-		box-shadow: rgba(0, 0, 0, .15) 0 3px 9px 0;
-		transform: translateY(-2px);
-	}
-
-/* Site Name and call to action*/
-	.box4{
-		grid-column: 1 / 2; 
-		grid-row: 1 / 2; 
-		margin: 5px;
-		position: relative;
-		display: flex;
-		align-items: center;
-
-	}
-
-	.box4 {
-		grid-column: 2 / 3; 
-		grid-row: 1 / 3; 
-		margin: 5px;
-		
-	}	
-
-	.box4 picture img{
-		width: 100%;
-		height: 590px;
-	}
-
-	.hero-button{
-		position: absolute;
-		bottom: 40px;
-		right: 30px;
-		background-color: #64e120a9;
-		border: 1px solid #ffffff;
-		border-radius: 4px;
-		box-shadow: rgba(255, 255, 255, 0.1) 0 2px 4px 0;
-		box-sizing: border-box;
-		color: #fff;
-		cursor: pointer;
-		outline: none;
-		outline: 0;
-		padding: 10px 25px;
-		text-align: center;
-		transform: translateY(0);
-		transition: transform 150ms, box-shadow 150ms;
-		user-select: none;
-		-webkit-user-select: none;
-		touch-action: manipulation;
-	}
-	
-	.hero-button:hover {
-		box-shadow: rgba(0, 0, 0, .15) 0 3px 9px 0;
-		transform: translateY(-2px);
-	}
-
-/* News Release */
-
-	.box5 {
-		grid-column: 2 / 3; 
-		grid-row: 3 / 4; 
-		margin: 5px;
-		display: grid;
-		}
-	  
-	.text-new-release{
-		text-align: center;
-		align-items: center;
-		justify-content: center;
-		padding: 20px;
-	 }
-
-	.box5 .text-new-release .paragraph-text{
-		padding: 30px;
-	 }
-	 
-
-	 
-	 /* 3 Spotlights */
-	.box6 {
-		grid-column: 3 / 4; 
-		grid-row: 1 / 4; 
-		margin: 5px;
-		display:grid;
-	}
-	  
-	.smallbox1, .smallbox2, .smallbox3{
-		min-width: 150px;
-		margin: 10px;
-		padding: 30px;
-	  }
-
-	.smallbox1 {
-		grid-column: 1 / 2;
-		grid-row: 1 / 2; 
-		border: 1px solid rgb(185, 183, 47);
-		text-align: center;
-	}
-	  
-	.smallbox1 img {
-		width: 200px;
-		transition: all 1s;
-	}
-
-	.car-icon:hover {
-		transform: scale(1.2);
-	}
-
-	.smallbox2 {
-		grid-column: 1 / 2; 
-		grid-row: 2 / 3; 
-		border: 1px solid rgb(185, 183, 47);
-		text-align: center;
-	}
-
-	.smallbox2 img {
-		width: 200px;
-		transition: all 1s;
-		
-	}
-
-	.colors-icon:hover {
-		transform: scale(1.2);
-	}
-
-	.smallbox3 {
-		grid-column: 1 / 2; 
-		grid-row: 3 / 4; 
-		border: 1px solid rgb(185, 183, 47);
-		text-align: center;
-	  }
-
-	.smallbox3 img {
-		width: 200px;
-		transition: all 1s;
-		
-	}
-	.house-icon:hover {
-		transform: scale(1.2);
-	}
-
-/* ______________________________________________________________________________________ */
-/* Main additional stuff */
-	.sample-siteheader{
-		font-family: 'Bree Serif', serif;
-		font-family: 'Playfair Display', serif;
-		font-size: 25px !important;
-		color: #EAD637;
-
-	}
-	
-	.primary-navigation{
-		font-family: 'Bree Serif', serif;
-		font-size: 50px !important;
-		
-	}
-	
-	
-	h1{
-		font-size: 40px !important;
-		
-		font-family: 'Playfair Display', serif
-	}
-	
-	h2{
-		font-size: 36px !important;
-	}
-	
-	h3{
-		font-size: 33px !important;
-	}
-	
-	
-	.paragraph-text{
-		font-size:15px !important;
-	}
-
-
-/*Discover images*/
-
-	.image-container{
-		display: flex;
-	    flex-direction: column;
-    	align-items: center;
-    	margin: 20px 0;
-	}
-
-
-.discover-img{
-	width:800px;
-	height:400px;
-}
-/* _______________________________________________________________________________ */
-/* FOOTER */
-
-footer {
-	max-width:  1700px;
-	background-color:  #3ca9ed;
-	display: grid;
-	display: grid;
-	grid-template-columns: 2fr 2fr 2fr;
-	grid-template-rows: repeat(6, auto);
-	justify-items: center;
-	align-items: center;
-	padding-bottom: 20px;
-}
-
-footer p {
-	text-align: center;
-	padding: 20px;
-}
-
-
-footer  img{
-	display: flex;
-	cursor: pointer;
-	width: 20%;
-	transition: all 1s;
-	margin: 0px 0px 0px 20px;
-	margin-top: 10px;
-}
-
-footer img:hover {
-	transform: scale(1.2);
-}
-
-
-
-.footer-navigation{
-	font-family: 'Bree Serif', serif;
-	font-size: 25px !important;
-}
-
