--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -1,447 +1,5 @@
-/* TABLET VIEW */
-@media only screen and (min-width: 35rem) {
-
-	body {
-		font-family: 'Nanum Gothic', sans-serif;
-		background-color:  #e4d9c4;
-	}
-/* ________________________________________________________________________________ */
-/* HEADER */
-
-
-	header{
-		background-color:  #3ca9ed;
-		display: grid;
-		grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-		/* justify-content: space-between;
-		align-items: center;
-		height: 200px;
-		padding: 5px 10%; */
-	}
-	
-/* Headerlogo */
-	header #headerlogo {
-		grid-column: 1 / 2;
-		grid-row: 1 / 1;
-		align-self: center;
-		justify-self: center;
-		border-radius: 50%;
-		object-fit: cover;
-		width: 80%;
-		cursor: pointer;
-		transition: all 1s;
-	}
-		
-	#headerlogo img:hover {
-		transform: scale(1.2);
-	}
-
-	header h1 {
-		grid-column: 2/3;
-		grid-row: 1 / 1;
-		margin: 0;
-		align-self: center;
-	}
-	
-	header h2 {
-		grid-column: 3/4;
-		grid-row: 1/1;
-		margin: 0;
-	}
-	
-	header button {
-		grid-column: 4/5;
-		align-self: center;
-		justify-self: center;
-		background-color: #1c98ed;
-		border: 2px solid #000;
-		margin: 0.4rem;
-		height: 50px;
-		width: 50px;
-		padding: 0.5rem;
-		cursor: pointer;
-		font-weight: bolder;
-	}
-	
-	header p {
-		grid-column: 1 / -1;
-		grid-row: 4 / 5;
-		margin: 0.5rem;
-		padding: 1rem;
-		background-color: #003a63;
-		text-align: center;
-		font-family:"Playfair Display", serif;
-	}
-	
-/* _____________________________________________________________________________________ */
-/* Social Media Icons */
-header #facebook {
-	grid-column: 5/6;
-	object-fit: cover;
-	width: 100%;
-	align-self: center;
-	justify-self: center;
-	border-radius: 40px;
-  }
-
-header #linkedin {
-	grid-column: 6/7;
-	object-fit: cover;
-	width: 100%;
-	align-self: center;
-	justify-self: center;
-	border-radius: 40px;
-  }
-
-	/* ____________________________________________________________________________________ */
-/* Tablet and Mobile Viewport (Hamburger Button) */
-nav{
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-}
-
-nav ul {
-   list-style-type: none; 
-   padding: 0;
-   margin: 0;
-}
-
-nav ul li a{
-    display: block;
-    padding: .8rem 2vw;
-    text-decoration: none;
-    color: #333;
-    border-top: 1px solid rgba(0, 0, 0, 0.5);
-}
-
-nav ul li.active a {
-    background-color: rgba(0, 0, 0, 0.2);
-    color: #fff;
-}
-
-nav ul li a:hover {
-    background-color: rgba(0,0,0,0.3) ;
-}
-
-nav ul {display: none;}
-nav ul.open {display: block;}
-
-/* We want the X not to appear on the side of the hamburger nav but be hidden */
-#hamburgerBtn span:nth-child(1) {display: block;}
-#hamburgerBtn span:nth-child(2) {display: none;}
-
-
-/* We want the Opposite, we want the X to appear when the hamburger nav opens */
-#hamburgerBtn.open span:nth-child(1) {display: none;}
-#hamburgerBtn.open span:nth-child(2) {display: block;}
-
-/* ___________________________________________________________________________________ */
-/* Header Date */
-	.date {
-		background-color: #3ca9ed;
-		color: white;
-		text-align: center;
-		margin-top: -50px;
-		margin-left: 10px;
-		margin-right: 10px;
-		padding: 10px 0px 10px 0px;
-	}
-/*____________________________________________________________________________________ */
-/* MAIN */
-	main{
-		width: auto;
-		background-color: #e4d9c4;
-		margin: 50px;
-	}
-
-	.containerS {
-		display: grid;
-		grid-template-columns: repeat(2, 1fr);
-		grid-template-rows: repeat(5, minmax(auto, 300px)); /* Creates 5 equal rows */
-		
-	  }
-
-	  .box1, .box2, .box3, .box4, .box5, .box6 {
-		background-color:#e4d9c4;
-		border:5px solid gray;
-		margin: 10px;
-		padding: 10px;
-	} 
-	  
-/* Event */
-	.box1 {
-		grid-column: 2 / 4;
-		grid-row: 5 / 5; 
-		margin: 5px;
-		width: auto;
-		text-align: center;
-		align-items: center;
-		justify-content: center;
-		padding: 20px;
-	}
-
-/*Weather box*/ 
-	.box2 {
-		grid-column: 1 / 2;
-		grid-row: 5 / 5; 
-		margin: 5px;
-		width:600px;
-		text-align: center;
-		align-items: center;
-		justify-content: center;
-	}
-
-	.upside-weather{
-		display: inline-block;
-		padding: 30px;
-	}
-
-
-	.fa-thermometer-half{
-		font-size: 50px;
-		transition: all 1s;
-	}
-
-		
-	.fa-thermometer-half:hover {
-		transform: scale(1.2);
-	}
-
-/*Join  */
-
-	.box3 {
-		grid-column: 1 / 4;
-		grid-row: 4 / 4; 
-		margin: 5px;
-		text-align: center;
-		align-items: center;
-		justify-content: center;
-	  }
-
-	  .join-button{
-		display: inline-block;
-		margin: 50px;
-		background-color: #c8b102;
-		border: 1px solid #ffffff;
-		border-radius: 4px;
-		box-shadow: rgba(255, 255, 255, 0.1) 0 2px 4px 0;
-		box-sizing: border-box;
-		color: #fff;
-		cursor: pointer;
-		outline: none;
-		outline: 0;
-		padding: 10px 300px;
-		text-align: center;
-		transform: translateY(0);
-		transition: transform 150ms, box-shadow 150ms;
-		user-select: none;
-		-webkit-user-select: none;
-		touch-action: manipulation;
-	  }
-
-	  .join-button:hover {
-		box-shadow: rgba(0, 0, 0, .15) 0 3px 9px 0;
-		transform: translateY(-2px);
-		}
-
-/* Site Name and Call to action */
-	.box4 {
-		grid-column: 1 / 4;
-		grid-row: 1 / 1; 
-		margin: 5px;
-		position: relative;
-		width: 99%;
-	  }
-
-	.box4 picture img{
-		width: 100%;
-		height: 290px;
-	}
-
-	.hero-button{
-		position: absolute;
-		bottom: 40px;
-		right: 30px;
-		background-color: #64e120a9;
-		border: 1px solid #ffffff;
-		border-radius: 4px;
-		box-shadow: rgba(255, 255, 255, 0.1) 0 2px 4px 0;
-		box-sizing: border-box;
-		color: #fff;
-		cursor: pointer;
-		outline: none;
-		outline: 0;
-		padding: 10px 25px;
-		text-align: center;
-		transform: translateY(0);
-		transition: transform 150ms, box-shadow 150ms;
-		user-select: none;
-		-webkit-user-select: none;
-		touch-action: manipulation;
-		}
-	
-		.hero-button:hover {
-		box-shadow: rgba(0, 0, 0, .15) 0 3px 9px 0;
-		transform: translateY(-2px);
-		}
-
-/* News Release */
-	  
-	.box5 {
-		grid-column: 1 / 4;
-		grid-row: 2 / 2; 
-		margin: 5px;
-		text-align: center;
-		align-items: center;
-		justify-content: center;
-		padding: 60px;
-	  }
-	  
-/* 3 Spotlights */
-	  .box6 {
-		grid-column: 1 / 4;
-		grid-row: 3 / 3; 
-		margin: 5px;
-		display:grid;
-	  }
-	  
-	.smallbox1{
-		border: 1px solid rgb(185, 183, 47);
-		grid-column: 1 / 2;
-		grid-row: 1 / 1; 
-		padding: 30px;
-		display: flex;
-		display:inline;
-		text-align: center;
-	  }
-
-	.smallbox1 img {
-		width: 20%;
-		transition: all 1s;
-		
-	}
-	  .car-icon:hover {
-		transform: scale(1.2);
-	}
-
-	.smallbox2{
-		border: 1px solid rgb(185, 183, 47);
-		grid-column: 2 / 2;
-		grid-row: 1 / 1; 
-		padding: 30px;
-		display: flex;
-		display:inline;
-		text-align: center;
-	}
-
-	.smallbox2 img {
-		width: 20%;
-		transition: all 1s;
-		
-	}
-	  .colors-icon:hover {
-		transform: scale(1.2);
-	}
-	
-	.smallbox3{
-		border: 1px solid rgb(185, 183, 47);
-		padding: 20px;
-		margin: 20px;
-		display: none;
-	  }
-
-/*_____________________________________________________________________________________  */
-/* FOOTER */
-	 footer { 
-		display: grid;
-		grid-template-columns: 3;
-		grid-template-rows: 2;
-	}
-		
-	.address img{
-		cursor: pointer;
-		width: 20%;
-		transition: all 1s;
-		margin: 0px 0px 0px 20px;
-	}
-
-	footer img:hover {
-		transform: scale(1.2);
-	}
-	
-	.left-section{
-		text-align: left;
-		
-	}
-
-	#footercontainer {
-		display: grid;
-		grid-template-columns: auto auto auto;
-		grid-template-rows: 2/3 ;
-		text-align: center;
-		align-items: center;
-		justify-content: center;
-		
-	}
-
-	footer p {
-		text-align: center;
-		padding: 20px;
-	}
-	
-
-	footer p {
-		flex-direction: row;
-	}
-	
-	
-	.sample-siteheader{
-		font-family: 'Bree Serif', serif;
-		font-family: 'Playfair Display', serif;
-		font-size: 40px !important;
-		color: #EAD637;
-	
-	}
-	
-	
-	.primary-navigation{
-		font-family: 'Bree Serif', serif;
-		font-size: 35px !important;
-		
-	}
-	.footer-section{
-		display: grid;
-		grid-template-columns: auto auto;
-		text-align: center;
-		align-items: center;
-		
-	}
-	
-	
-
-	.footer-navigation{
-		font-family: 'Bree Serif', serif;
-		font-size: 25px !important;
-	}
-	
-	h1{
-		font-size: 30px !important;
-		font-family: 'Bree Serif', serif;
-		font-family: 'Playfair Display', serif
-	}
-	
-	h2{
-		font-size: 25px !important;
-	}
-	
-	h3{
-		font-size: 23px !important;
-	}
-	
-	
-	.paragraph-text{
-		font-size: 20px !important;
-	}
+/* Tablet Views ******************************/
+@media (min-width: 800px) and (max-width: 1200px) {
 
 
 }
