--- a/styles/medium.css
+++ b/styles/medium.css
@@ -1,52 +1,3 @@
-  /*  @media screen and (min-width: 32.5em) {
-
-h1 {
-    font-size: 2.5rem;
-}
- h2 {
-    font-size: 1.5rem;
- }
- header, footer {
-    border-radius: 10px;
- }
- .banner {
-   flex-flow: row wrap;
-   
- }
- img {
-    box-shadow: 0 0 30px #555;
-    float: right;
-    border-radius: 0 10px 0 0;
- }
-
- }*/
-
- @media only screen and (min-width: 32.5em) {
-   h1 {
-       font-size: 1.8rem;
-   }
-
-   h2 {
-       font-size: 1.5rem;
-   }
-
-   header,
-   footer {
-       border-style: double;
-       border-radius: 12px;
-       border-width: 2px;
-   }    
-
-   header img {
-       width: 120px;
-       display: flex;
-   }
-
-   hr {
-       /* margin: auto 0px; */
-       width: 31.5em;
-   }
-
-   nav ul { display: flex; }
-   nav ul li { flex: 1 1 auto; } 
+@media (min-width: 768px) and (max-width: 1200px){
+    
 }
