--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -1,5 +1,633 @@
-/* Tablet Views ******************************/
 @media (min-width: 800px) and (max-width: 1200px) {
+
+@import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Playfair+Display:wght@400;700&display=swap");
+
+body {
+	font-family: 'Nanum Gothic', sans-serif;
+    background-color:  #e4d9c4;
+    background: linear-gradient(90deg,#64e120a9 0%, #e4d9c4 100%, #64e120a9 100%);
+    padding: 0;
+    margin: 0;
+	color:#03066c;
+}
+
+h1, h2, h3{
+	font-family: 'Playfair Display', serif;
+}
+
+p {
+	font-family: 'Nanum Gothic', sans-serif; 
+	font-size: 15px ;
+}
+
+/* __HEADER________________________________________________________________________________________________________ */
+
+header { 
+	background-color: #3ca9ed;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	height: 200px;
+	padding: 5px 10%;
+}
+
+header .headerlogo {
+	display: flex;
+	display:inline;
+	cursor: pointer;
+	box-shadow: #ccc; 
+}
+
+header .headerlogo img {
+	width: 60%;
+	transition: all 1s;
+}
+
+header .headerlogo img:hover {
+	transform: scale(1.2);
+}
+
+header h1{
+	color: #e4d9c4;
+}
+
+html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
+
+/*----------- apply a natural box layout model to all elements --------------*/
+* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
+	
+
+nav button{
+	background: transparent;
+	border: none;
+	margin: 20px;
+	font-size: 2rem;
+	color: #3ca9ed;
+	border-radius: 50%;
+	box-shadow: #ccc; 
+	cursor: pointer;
+}
+	
+nav { 
+	background-color:#e4d9c4; 
+	display: flex;
+	justify-content:space-between
+}
+
+nav ul {
+	list-style-type: none; 
+	padding: 0;
+	margin: 0;
+}
+	
+nav ul li a{
+	display: block;
+	margin: 10px;
+	padding: 5px;
+	text-decoration: none;
+	color:  #3ca9ed;
+	border-top: 1px solid #3ca9ed;
+}
+
+#facebook,  #linkedIn {
+	display:inline-block;
+	border-radius: 50%;
+}
+
+nav p {
+	font-family: 'Nanum Gothic', sans-serif; 
+	font-size: 1.3rem;
+}
+	
+nav ul li.active a {
+	background-color: rgba(0, 0, 0, 0.2);
+}
+	
+nav ul li a:hover {
+	background-color: #64e120a9;
+}
+	
+nav ul {display: none;}
+nav ul.open {display: block;}
+	
+/* We want the X not to appear on the side of the hamburger nav but be hidden */
+#hamburgerBtn span:nth-child(1) {display: block;}
+#hamburgerBtn span:nth-child(2) {display: none;}
+	
+	
+/* We want the Opposite, we want the X to appear when the hamburger nav opens */
+#hamburgerBtn.open span:nth-child(1) {display: none;}
+#hamburgerBtn.open span:nth-child(2) {display: block;}
+
+.date {
+	background-color: #64e120a9;
+	font-family: 'Nanum Gothic', sans-serif; 
+	font-size: 1.3rem;
+	color: #e4d9c4;
+	text-align: center;
+	margin-top: -50px;
+	margin-left: 10px;
+	margin-right: 10px;
+	padding: 10px 0px 10px 0px;
+	border: 1px solid  #e4d9c4 ;
+}
+	
+/* _______________________________________MAIN_______________________________________________________________ */
+main{
+	background: linear-gradient(90deg, #64e120a9  0%, #e4d9c4 100%, white 100%);
+	width: auto;
+	background-color: #e4d9c4;
+	margin: 50px;
+	color:#03066c;
+}
+
+.main_container {
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		grid-template-rows: repeat(5, minmax(auto, 300px)); 
+}
+
+.event, .weather, .join, .hero, .news_release, .spotlight {
+	background-color: #e4d9c4;
+	border: 1px solid  #3ca9ed;
+}
+	  
+.event {
+	grid-column: 2 / 4;
+	grid-row: 5 / 5; 
+	margin: 5px;
+	width: auto;
+	text-align: center;
+	align-items: center;
+	justify-content: center;
+	padding: 20px;
+}
+
+/* __________________________________________________________________ */
+	  
+.weather {
+	grid-column: 1 / 2;
+	grid-row: 5 / 5; 
+	margin: 5px;
+	width:600px;
+	text-align: center;
+	align-items: center;
+	justify-content: center;
+}
+
+figure {
+	background-color: #64e120a9;
+	display: inline-block;
+	padding: 0.5rem;
+	color: black;
+}
+
+/* _________________________________________________________________ */
+	
+.join {
+	grid-column: 1 / 4;
+	grid-row: 4 / 4; 
+	margin: 5px;
+	text-align: center;
+	align-items: center;
+	justify-content: center;
+}
+
+.join_btn {
+	color:#03066c;
+	display: inline-block;
+	margin: 50px;
+	background-color: #64e120a9;
+	border: 1px solid #3ca9ed;;
+	border-radius: 4px;
+	color: #101010;
+	cursor: pointer;
+	padding: 10px 30px;
+	text-align: center;
+	transform: translateY(0);
+}
+
+.join_btn :hover {
+	transform: translateY(-2px);
+}
+	  
+/* _____________________________________________________________________ */
+
+.hero {
+	grid-column: 1 / 4;
+	grid-row: 1 / 1; 
+	margin: 5px;
+	position: relative;
+	width: 99%;
+}
+
+.hero picture img{
+	width: 100%;
+	height: 290px;
+}
+
+.hero_btn{
+	color:#03066c;
+	position: absolute;
+	bottom: 40px;
+	right: 30px;
+	background-color: #64e120a9;
+	border: 1px solid #e4d9c4;
+	border-radius: 4px;
+	box-sizing: border-box;
+	cursor: pointer;
+	padding: 10px 25px;
+	text-align: center;
+	transform: translateY(0);
+}
+	
+.hero_btn:hover {
+	box-shadow: rgba(0, 0, 0, .15) 0 3px 9px 0;
+	transform: translateY(-2px);
+}
+
+/* ________________________________________________________________________________________________________ */
+.news_release {
+	grid-column: 1 / 4;
+	grid-row: 2 / 2; 
+	margin: 5px;
+	text-align: center;
+	align-items: center;
+	justify-content: center;
+	padding: 60px;
+}
+	  
+.spotlight {
+	display:grid;
+	grid-column: 1 / 4;
+	grid-row: 3 / 3; 
+	margin: 5px;
+	border: 1px solid #3ca9ed;
+}
+	  
+.start{
+	border: 1px solid #3ca9ed;
+	grid-column: 1 / 2;
+	grid-row: 1 / 1; 
+	padding: 30px;
+	display: flex;
+	display:inline;
+	text-align: center;
+}
+
+.start img {
+	width: 20%;
+	transition: all 1s;	
+}
+
+.opportunities {
+	display: flex;
+	display:inline;
+	text-align: center;
+	border: 1px solid #3ca9ed;
+	grid-column: 2 / 2;
+	grid-row: 1 / 1; 
+	padding: 30px;
+}
+
+.opportunities img {
+	width: 20%;
+	transition: all 1s;	
+}
+
+.apply {
+	border: 1px solid #3ca9ed;
+	padding: 20px;
+	margin: 20px;
+	display: none;
+}
+
+/* ______________________________FOOTER ___________________________________________________________________ */
+.footer_container {
+	display: grid;
+	grid-template-columns: auto auto;
+	text-align: center;
+	align-items: center;
+	justify-content: center;
+}
+
+footer {
+	display: grid;
+	color: #050505;
+	background-color: #3ca9ed ;
+	align-items: center;
+	border: 1px solid rgba(0, 0, 0, 0.2);	
+}
+
+footer  img{
+	display: flex;
+	display:inline;
+	cursor: pointer;
+	width: 50%;
+	transition: all 1s;
+	margin: 0px 0px 0px 20px;
+}
+
+footer img:hover {
+	transform: scale(1.2);
+}
+
+footer p {
+	font-family: 'Playfair Display', serif; 
+	font-size: 20px;
+	text-align: center;
+	padding: 20px;
+	text-align: center;
+	padding: 20px;
+	flex-direction: row;
+}	
+
+.left {
+	text-align: left;
+}
+
+/*////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////  */
+
+/* DISCOVER PAGE */
+
+.discover_main{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+	margin: 70px 0;
+}
+
+.picture{
+	border: 1px solid #3ca9ed;
+	width: 70%;
+	padding: 0px 0px 50px 0px;
+	margin: 20px 0;
+	background-color: #e4d9c4;	
+}
+
+.picture p {
+	font-family: 'Playfair Display', serif; 
+	font-size: 20px;
+	text-align: center;
+	padding: 10px;
+}
+
+.picture img{
+	width: 100%;
+	height: 100%;
+	transition: all 1s;
+}
+
+.picture img:hover {
+	transform: scale(1.2);
+}
+
+/* /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
+
+/*  DIRECTORY PAGE  */
+
+.menu {
+	margin: 1rem auto;
+	border: 1px solid #3ca9ed;
+	padding: 5px;
+	background-color:  #e4d9c4;
+	text-align: center;
+	font-family: 'Nanum Gothic', sans-serif; 
+	font-size: 20px ;
+}
+
+.menu button {
+	padding: 2rem;
+	margin: 5px;
+	border: 1px solid #3ca9ed;
+	background-color: #64e120a9;
+	padding: 1rem;
+	font-weight: 700;
+}
+
+.menu button:hover{
+	transform: scale(1.2);
+}
+
+main #directory {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 20px;
+	font-family: 'Nanum Gothic', sans-serif;
+}
+
+div.cards {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-gap: 5px;
+	align-items: center;
+	text-align: center;
+}
+  
+section{ 
+	margin: auto;
+	padding: 20px;
+	border: 1px solid #3ca9ed;
+	background-color: #e4d9c4;
+	border-radius: 20px;
+}
+  
+.card img {
+	width: auto;
+	height: 100%;
+	max-width: 325px;
+	box-shadow: 0 0 30px #ccc;
+	border: 10px solid #3ca9ed;
+	object-fit: contain;
+}
+
+.list {
+	display: flex;
+	flex-direction: column;
+	padding: 10px;
+}
+
+.list section {
+	display: grid;
+	grid-template-columns: 2fr 1fr 1fr;
+	margin: 5px;
+	padding: 1rem;
+}
+
+.list section > * {
+	margin: 0 1rem;
+}
+
+.list section h2 {
+	font-size: 1.25rem;
+	font-family: 'Playfair Display', serif; 
+}
+
+.list section:nth-child(even) {
+	background-color:  #64e120a9;
+}
+
+.list section img {
+	height: 100px;
+	width: 50%; 
+	object-fit: contain;
+} 
+
+/*///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////  */
+
+/* JOIN PAGE*/
+
+
+form{
+	border: 2px solid #3ca9ed;
+	box-shadow: 0px 4px 4px 9px rgba(0,0,0,0.1);
+	width: 600px;
+	padding: 100px;
+	margin: auto;
+}
+
+form input{
+	width: 400px;
+	height: 30px;
+	border-radius: 5px;
+}
+
+form label, input{
+	margin: 5px 0;
+}
+
+form label.top, form div {
+    display: block;
+    padding-top: 1rem;
+}
+
+form label.top input, form label.top select {
+    -webkit-appearance: none;
+    display: block;
+    font-size: 1rem;
+    border: solid 1px #999;
+    border-radius: 4px;
+    padding: .75rem;
+    color: #555;
+    width: 100%;
+    max-width: 20rem;
+    background-color: #e4d9c4;
+}
+
+form legend {
+	font-family: 'Playfair Display', serif; 
+	font-size: 1.5rem;
+	color: #0a334c;
+	margin: 0 1 rem;
+	padding: 0 .5rem;
+}
+
+form input.submitBtn {
+	font-family: 'Playfair Display', serif; 
+	font-size: 1.25rem;
+	border: none;
+	background-color:#3ca9ed;
+	color: #e4d9c4;
+	border: 2px solid #64e120a9;;
+	border-radius: 30px;
+	margin: 20px;
+	height: 50px;
+	cursor: pointer;
+	padding: 20px;
+	text-align: center;
+	transform: translateY(0);
+	justify-content: center;
+}
+
+form input.submitBtn:hover{
+	transform: scale(1.1);
+	box-shadow: 0px 1px 1px 1px rgba(0,0,0,0.1);
+}
+
+textarea{
+	width: 400px;
+	height: 100px;
+	background-color: #e4d9c4;
+
+}
+
+form label.top input:required {
+    border-left: red solid 6px;
+}
+
+form label.top input:required:valid {
+    border-left: green solid 6px;
+}
+
+fieldset {
+	border: none;
+	padding: 10px;
+  }
+ 
+
+option[selected] {
+	background-color: #e4d9c4;
+	font-weight: bold;
+  }
+
+.joinform {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+} 
+  
+.side1 {
+	order: 1; 
+}
+  
+.memberInfo{
+	margin-top: 100px;
+	padding: 0px 0px 0px 50px;
+	order: 2;
+}
+
+.side1 h1 {
+	justify-content: center;
+	text-align: center;
+}
+
+.memberInfo h1 {
+	font-size: 1.5rem;
+}
+
+.side h3 {
+	font-family: 'Playfair Display', serif; 
+	font-size: 1.5rem;
+	color: #0a334c;
+	margin: 0 1 rem;
+	padding: 0 .5rem;
+}
+
+.memberInfo{
+	text-align: center;
+	justify-content: center;
+	margin-left: -50px;
+} 
+.side2{
+	/* list-style-type: none;  */
+	display: flex;
+	flex-wrap: wrap;
+	gap: 1em;
+	align-items: center;
+	text-align: center;
+	width: 400px;
+  }
+
+/* THANKS HTML________________________________________ */
+
+ .thanks{
+	text-align: center;
+	align-items: center;
+	justify-content: center;
+	height:700px;
+ }
 
 
 }
