--- a/lesson_3/styles/design.css
+++ b/lesson_3/styles/design.css
@@ -1,7 +1,7 @@
 :root {
     --primary-color: #3ca9ed;
     --secondary-color: #64e120a9;
-    --accent1-color: #e4d9c4;;
+    --accent1-color: #e4d9c4;
     --accent2-color: #54dcf5;
   
     --heading-font: 'Merienda', Times, serif;
