--- a/lesson_5/styles.css
+++ b/lesson_5/styles.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Playfair+Display:wght@400;700&display=swap");
+
 html{
     background: linear-gradient(90deg, rgb(65, 175, 248) 0%, rgb(243, 246, 248) 100%, rgb(18, 121, 231) 100%);
   }
