--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -1,92 +1,599 @@
-/* DESKTOP VIEW */ 
+@media  (min-width: 1245px) {
 
-@media (min-width: 1201px) {
+@import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Playfair+Display:wght@400;700&display=swap");
 
-body {
-	font-family: 'Nanum Gothic', sans-serif;
-	background-color:  #e4d9c4;
-	padding: 0;
+* {
+	box-sizing: border-box;
 	margin: 0;
+	padding: 0;
 }
 
+body {
+    font-family: 'Nanum Gothic', sans-serif;
+    background-color:  #e4d9c4;
+    background: linear-gradient(90deg,#64e120a9 0%, #e4d9c4 100%, #64e120a9 100%);
+    padding: 0;
+    margin: 0;
+	color:#03066c;
+}
+
+
+h1, h2, h3{
+	font-family: 'Playfair Display', serif;
+}
+
+p{
+	font-family: 'Nanum Gothic', sans-serif; 
+	font-size: 20px ;
+}
+
+/*___HEADER_______________________________________________________________________________________________________________________________________  */
+
 header { 
-	background-color:  #3ca9ed;
+	background-color: #3ca9ed;
+	display: flex;
 	justify-content: space-between;
+	align-items: center;
 	height: 250px;
 	padding: 5px 10%;
 }
-	
-#main_nav ul {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  	font-size: 1em;
-}
 
-#headerlogo{
-	grid-column: 1/2;
-	width: 80%;
+header .headerlogo {
+	display: flex;
+	display:inline; 
 	cursor: pointer;
+	box-shadow: #ccc; 
+}
+
+header .headerlogo img  {
+	width: 70%;
 	transition: all 1s;
 }
 
-#headerlogo img:hover {
-		transform: scale(1.2);
-}
-  
-
-#main_nav h1{
-	grid-column: 2 / 3;
-    font-family: "Playfair Display", serif;
-}
-
-#main_nav li{
-	font-size: 20px;
-	padding: 5px;
-	list-style-type: none;
-}
-
-#facebook,  #linkedin{
-	width: 80%;
-	border-radius: 50%;
-}
-
-#facebook,  #linkedin a:hover {
-	transition: all 1s;
+header .headerlogo img:hover {
 	transform: scale(1.2);
 }
 
-.nav_style{
-	font-family:"Playfair Display", serif;
-	font-size: 2.5px;
-	list-style-type: none; 
-	text-decoration: none;
-  }
+header h1{
+	color: #e4d9c4;
+}
 
-nav ul li a:hover {
-		background-color: rgba(0,0,0,0.3) ;
-		color: #0e0f0e;
-		transition: all 1s;
-		transform: scale(1.2);
+nav {
+	justify-content: space-between;	
+}
+
+nav button{ display: none;}
+
+nav #primaryNav {
+	display: flex ;
+	list-style: none;
+	cursor: pointer;
+}
+
+nav #primaryNav li a {
+	font-family: 'Playfair Display', serif;
+	font-size: 2rem;
+	display: inline-block ; 
+	padding: 20px;
+	color: #e4d9c4;
+}
+
+nav #primaryNav li a:hover {
+	background-color: #64e120a9;
+}
+
+nav ul #primaryNav {
+    display: flex;
+    justify-content: center;
+}
+
+nav p {
+	font-family: 'Playfair Display', serif;
+	font-size: 1.25rem;
+}
+
+
+#facebook,  #linkedIn {
+	border-radius: 50%;
+	justify-content: space-between;	
+	margin: 10px;
+}
+ 
+
+.date {
+	background-color:#64e120a9;
+	font-family: 'Nanum Gothic', sans-serif; 
+	font-size: 1.3rem;
+	color: #e4d9c4;
+	text-align: center;
+	margin-top: -50px;
+	margin-left: 10px;
+	margin-right: 10px; 
+	padding: 10px 0px 10px 0px; 
+	border: 1px solid  #e4d9c4 ;
+	
+}
+
+/* _____MAIN___________________________________________________________________________________________________________________ */
+main{
+	background: linear-gradient(90deg, #64e120a9  0%, #e4d9c4 100%, white 100%);
+	background-color: #e4d9c4;
+	margin: 25px;
+}
+
+.main_container {
+	display: grid;
+	grid-template-columns: 1fr 3fr 1fr; 
+	grid-template-rows: repeat(3, minmax(auto, 300px)); 
+	max-width: 2000px; 
+	margin: 0 auto; 
+}
+
+.event, .weather, .join, .hero, .news_release, .spotlight { 
+	background-color: #e4d9c4;
+	border: 1px solid  #64e120a9;
+}
+ 
+.event, .weather, .join, .start, .opportunities,.apply { 
+	min-width: 150px;
+	margin: 10px;
+	padding: 20px;
+	border: 1px solid  #3ca9ed ;
+}
+
+.event {
+	grid-column: 1 / 2; 
+	grid-row: 1 / 2 ; 
+	text-align: center;
+	align-items: center;
+	justify-content: center;
+}
+
+.weather {
+	grid-column: 1 / 2; 
+	grid-row: 2 / 3;
+	display: flex;
+	text-align: center;
+	align-items: center;
+	justify-content: center;
+}
+
+/* weather figure */
+figure {
+    background-color: #64e120a9;
+    display: inline-block;
+    padding: 0.5rem;
+    color: black;
+}
+
+/* ____________________________________ */
+
+.join {
+	grid-column: 1 / 2; 
+	grid-row: 3 / 4; 
+	text-align: center;
+	align-items: center;
+	justify-content: center;
+}
+  
+.join_btn{
+	color:#03066c;
+	background-color:  #64e120a9;
+	border: 1px solid #3ca9ed;
+	display: inline-block;
+	margin: 20px 50px;
+	border-radius: 4px;
+	font-size: 1.25rem;
+	cursor: pointer;
+	padding: 20px 20px;
+	text-align: center;
+	transform: translateY(0);
+	justify-content: center;
+}
+
+.join_btn:hover {
+		transform: translateY(-2px);
+}
+
+/* ______________________________________ */
+.hero {
+	grid-column: 2 / 3; 
+	grid-row: 1 / 3; 
+	margin: 5px;
+	position: relative;
+	display: flex;
+	align-items: center;
+}
+
+picture img {
+	width: 100%;
+	height: 590px;
+}
+
+.hero_btn {
+	color:#03066c;
+	position: absolute;
+	bottom: 40px;
+	left: 30px;
+	background-color:  #64e120a9;
+	border: 1px solid #e4d9c4;
+	border-radius: 4px;
+	box-sizing: border-box; 
+	cursor: pointer;
+	padding: 10px 25px;
+	text-align: center;
+	transform: translateY(0);
 	}
 
-nav ul li.active a {
-    background-color: rgba(0, 0, 0, 0.2);
-    color: #fff;
+.hero_btn:hover {
+		transform: translateY(-2px);
 }
 
-nav ul li a{
+/* _____________________________________________*/
+  /* News release*/
+.news_release {
+	display: grid;
+	grid-column: 2 / 3; 
+	grid-row: 3 / 4; 
+	margin: 5px;
+	text-align: center;
+	align-items: center;
+	justify-content: center;
+	padding: 20px;
+}
+
+.spotlight {
+	display:grid;
+	grid-column: 3 / 4; 
+	grid-row: 1 / 4; 
+	margin: 5px;
+}
+  
+.start {
+	grid-column: 1 / 2;
+	grid-row: 1 / 2; 
+	border: 1px solid  #3ca9ed ;
+	text-align: center;
+}
+
+.opportunities {
+	grid-column: 1 / 2; 
+	grid-row: 2 / 3; 
+	border: 1px solid  #3ca9ed;
+	text-align: center;
+}
+
+.apply {
+	grid-column: 1 / 2; 
+	grid-row: 3 / 4; 
+	border: 1px solid #3ca9ed;
+	text-align: center;
+}
+
+/* ______________________ FOOTER___________________________________ */
+.footer_container {
+	display: grid;
+	grid-template-columns: auto auto auto;
+	text-align: center;
+	align-items: center;	
+}
+
+footer {
+	color: #050505;
+	background-color: #3ca9ed ;
+	align-items: center;
+	border: 1px solid rgba(0, 0, 0, 0.2);
+	flex: 0 0 auto;
+}
+
+footer  img {
+	display: flex;
+	display:inline;
+	cursor: pointer;
+	width: 50%;
+	transition: all 1s;
+	margin: 0px 0px 0px 20px;	
+}
+
+footer img:hover {
+	transform: scale(1.2);
+}
+	
+.left{
+	text-align: left;	
+}
+
+.footer-section{
+	text-align: center;
+	align-items: center;
+	justify-content: center;	
+}
+
+footer p {
+	font-family: 'Playfair Display', serif; 
+	font-size: 20px;
+	text-align: center;
+	padding: 10px;
+	color:#03066c;
+}
+	
+/* \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
+
+/*DISCOVER PAGE*/
+
+.discover_main{
+	display: flex;
+    flex-direction: column;
+    align-items: center;
+	text-align: center;
+    margin: 70px 0;
+}
+
+.picture {
+	border: 1px solid #3ca9ed;
+	width: 800px;
+	/* border-radius: 50px; */
+	padding: 0px 0px 50px 0px;
+	margin: 20px 0;
+	background-color: #e4d9c4;	
+}
+
+.picture p {
+	font-family: 'Playfair Display', serif; 
+	font-size: 15px;
+	text-align: center;
+	padding: 10px;
+}
+
+
+.picture img{
+	width:100%;
+	height: 100%;
+	transition: all 1s;
+}
+
+.picture img:hover {
+	transform: scale(1.2);
+}
+
+/* \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
+
+/* DIRECTORY PAGE */
+
+.menu {
+	margin: 1rem auto;
+	border: 1px solid #3ca9ed;
+	padding: 5px;
+	background-color:  #e4d9c4;
+	text-align: center;
+	font-family: 'Nanum Gothic', sans-serif; 
+	font-size: 20px ;
+}
+
+.menu button {
+	padding: 2rem;
+	margin: 5px;
+	border: 1px solid #3ca9ed;
+	background-color: #64e120a9;
+	padding: 1rem;
+	font-weight: 700;
+}
+
+.menu button:hover{
+	transform: scale(1.2);
+}
+
+main #directory {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 20px;
+	font-family: 'Nanum Gothic', sans-serif;
+}
+
+div.cards {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-gap: 5px;
+	align-items: center;
+	text-align: center;
+}
+  
+section{ 
+	margin: auto;
+	padding: 20px;
+	border: 1px solid #3ca9ed;
+	background-color: #e4d9c4;
+	border-radius: 20px;
+}
+  
+.card img {
+	width: auto;
+	height: 100%;
+	max-width: 325px;
+	box-shadow: 0 0 30px #ccc;
+	border: 10px solid #3ca9ed;
+	object-fit: contain;
+}
+
+.list {
+	display: flex;
+	flex-direction: column;
+	padding: 10px;
+}
+
+.list section {
+	display: grid;
+	grid-template-columns: 2fr 1fr 1fr;
+	margin: 5px;
+	padding: 1rem;
+}
+
+.list section > * {
+	margin: 0 1rem;
+}
+
+.list section h2 {
+	font-size: 1.25rem;
+	font-family: 'Playfair Display', serif; 
+}
+
+.list section:nth-child(even) {
+	background-color:  #64e120a9;
+}
+
+.list section img {
+	height: 100px;
+	width: 50%; 
+	object-fit: contain;
+} 
+
+/* \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
+
+/* JOIN PAGE*/
+
+form{
+	border: 2px solid #3ca9ed;
+	box-shadow: 0px 4px 4px 9px rgba(0,0,0,0.1);
+	width: 600px;
+	padding: 100px;
+	margin: auto;
+}
+
+form input{
+	width: 400px;
+	height: 30px;
+	border-radius: 5px;
+}
+
+form label, input{
+	margin: 5px 0;
+}
+
+form label.top, form div {
     display: block;
-    padding: .8rem 2vw;
-    text-decoration: none;
-    color: #333;
-    border-top: 1px solid rgba(0, 0, 0, 0.5);
+    padding-top: 1rem;
 }
 
-main img{
-	width: 300px;
-	height: 400px
+form label.top input, form label.top select {
+    -webkit-appearance: none;
+    display: block;
+    font-size: 1rem;
+    border: solid 1px #999;
+    border-radius: 4px;
+    padding: .75rem;
+    color: #555;
+    width: 100%;
+    max-width: 20rem;
+    background-color: #e4d9c4;
 }
-/* Desktop Views ****************************/
 
+form legend {
+	font-family: 'Playfair Display', serif; 
+	font-size: 1.5rem;
+	color: #0a334c;
+	margin: 0 1 rem;
+	padding: 0 .5rem;
+}
 
+form input.submitBtn {
+	font-family: 'Playfair Display', serif; 
+	font-size: 1.25rem;
+	border: none;
+	background-color:#3ca9ed;
+	color: #e4d9c4;
+	border: 2px solid #64e120a9;;
+	border-radius: 30px;
+	margin: 20px;
+	height: 50px;
+	cursor: pointer;
+	padding: 20px;
+	text-align: center;
+	transform: translateY(0);
+	justify-content: center;
+}
+
+form input.submitBtn:hover{
+	transform: scale(1.1);
+	box-shadow: 0px 1px 1px 1px rgba(0,0,0,0.1);
+}
+
+textarea{
+	width: 400px;
+	height: 100px;
+	background-color: #e4d9c4;
+
+}
+
+form label.top input:required {
+    border-left: red solid 6px;
+}
+
+form label.top input:required:valid {
+    border-left: green solid 6px;
+}
+
+fieldset {
+	border: none;
+	padding: 10px;
+  }
+ 
+
+option[selected] {
+	background-color: #e4d9c4;
+	font-weight: bold;
+  }
+
+.joinform {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+} 
+  
+.side1 {
+	order: 1; 
+}
+  
+.memberInfo{
+	margin-top: 100px;
+	padding: 0px 0px 0px 50px;
+	order: 2;
+}
+
+.side1 h1 {
+	justify-content: center;
+	text-align: center;
+}
+
+.memberInfo h1 {
+	font-size: 1.5rem;
+}
+
+.side1 h3 {
+	font-family: 'Playfair Display', serif; 
+	font-size: 1.5rem;
+	color: #0a334c;
+	margin: 0 1 rem;
+	padding: 0 .5rem;
+}
+ 
+.side2{
+	/* list-style-type: none;  */
+	display: flex;
+	flex-wrap: wrap;
+	gap: 5em;
+	align-items: center;
+	text-align: center;
+	width: 400px;
+  }
+
+/* THANKS HTML________________________________________ */
+
+ .thanks{
+	text-align: center;
+	align-items: center;
+	justify-content: center;
+	height:700px;
+ }
+ 
 }
