--- a/styles/large.css
+++ b/styles/large.css
@@ -26,7 +26,7 @@ body {
     width: 180px;
     height: 250px;
     object-fit: contain; 
-    box-shadow: 5px 2px 5px 2px #ccc,
+    box-shadow: 5px 2px 5px 2px #ccc;
   }
 
 
