--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -1,7 +1,7 @@
-@media  (min-width: 1245px) {
-
 @import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Playfair+Display:wght@400;700&display=swap");
 
+
+@media  (min-width: 1245px) {
 * {
 	box-sizing: border-box;
 	margin: 0;
@@ -41,8 +41,7 @@ header {
 header .headerlogo {
 	display: flex;
 	display:inline; 
-	cursor: pointer;
-	box-shadow: #ccc; 
+	cursor: pointer; 
 }
 
 header .headerlogo img  {
@@ -131,7 +130,7 @@ main{
 
 .event, .weather, .join, .hero, .news_release, .spotlight { 
 	background-color: #e4d9c4;
-	border: 1px solid  #64e120a9;
+	border: 1px solid   #3ca9ed ;
 }
  
 .event, .weather, .join, .start, .opportunities,.apply { 
@@ -230,7 +229,7 @@ picture img {
 }
 
 /* _____________________________________________*/
-  /* News release*/
+  
 .news_release {
 	display: grid;
 	grid-column: 2 / 3; 
@@ -270,7 +269,7 @@ picture img {
 	text-align: center;
 }
 
-/* ______________________ FOOTER___________________________________ */
+/* _FOOTER________________________________________________________ */
 .footer_container {
 	display: grid;
 	grid-template-columns: auto auto auto;
@@ -492,8 +491,8 @@ form legend {
 	font-family: 'Playfair Display', serif; 
 	font-size: 1.5rem;
 	color: #0a334c;
-	margin: 0 1 rem;
-	padding: 0 .5rem;
+	margin: .1rem;
+	padding: 0.5rem;
 }
 
 form input.submitBtn {
@@ -573,8 +572,8 @@ option[selected] {
 	font-family: 'Playfair Display', serif; 
 	font-size: 1.5rem;
 	color: #0a334c;
-	margin: 0 1 rem;
-	padding: 0 .5rem;
+	margin: 0.1rem;
+	padding: 0.5rem;
 }
  
 .side2{
@@ -595,5 +594,20 @@ option[selected] {
 	justify-content: center;
 	height:700px;
  }
- 
+
+ /*CONTACT PAGE________________________________________  */
+
+.contact_us{
+	margin-top: 50px;
+	padding: 0px 0px 0px 50px;
+	order: 2;
 }
+ 
+.contact_us h1{
+	font-size: 1.25rem;
+}
+ 
+.contact_us h2{
+	font-size: 1.2rem;}
+}
+ 
