--- a/lesson_9/prophets.css
+++ b/lesson_9/prophets.css
@@ -30,6 +30,7 @@ h1 {
 }
 
 main{
+  
   display: flex;
   justify-content: center;
   align-items: center;
@@ -78,6 +79,16 @@ footer p{
   color: #efc8b1; 
   text-align: center;
   font-size: 1.5em;
+}
+
+@media (min-width: 800px) and (max-width: 1200px) {
+div.cards {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-gap: 5px;
+	align-items: center;
+	text-align: center;
+}
 }
   
 @media only screen and (max-width: 767px) {
